--- a/SocialSecurity/src/main/webapp/resources/css/profiledata_fgraph.css
+++ b/SocialSecurity/src/main/webapp/resources/css/profiledata_fgraph.css
@@ -19,8 +19,9 @@ and open the template in the editor.
 */
 
 #cy {
-    width: 70%;
-    height: 100%;
+    margin: 10px;
+    width: 95%;
+    height: 90%;
     display:block;
     border-style: groove;
     border-width: 3px;
